--- a/package.json
+++ b/package.json
@@ -2,10 +2,53 @@
   "name": "explore-your-options-client",
   "version": "0.1.0",
   "private": true,
+  "description": "Search potential careers and colleges to decide where you want to go.",
+  "main": "js/index.js",
   "dependencies": {
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
-    "react-scripts": "1.1.1"
+    "cheerio": "^1.0.0-rc.2",
+    "chokidar-cli": "^1.2.0",
+    "concurrently": "^3.4.0",
+    "core-js": "^2.5.1",
+    "cpr": "^2.2.0",
+    "enzyme": "^3.1.0",
+    "enzyme-react-16-adapter-setup": "^0.1.0",
+    "http-server": "^0.9.0",
+    "npm-run-all": "^4.1.1",
+    "react": "^16.0.0",
+    "react-addons-test-utils": "^15.6.0",
+    "react-dom": "^16.0.0",
+    "react-fontawesome": "^1.6.1",
+    "react-redux": "^4.4.5",
+    "react-router-dom": "^4.0.0",
+    "redux": "^3.6.0",
+    "redux-form": "^7.3.0",
+    "redux-thunk": "^2.2.0",
+    "rimraf": "^2.6.2",
+    "unirest": "^0.5.1"
+  },
+  "devDependencies": {
+    "acorn": "^5.1.2",
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.13.1",
+    "babel-preset-react": "^6.11.1",
+    "chai": "^3.5.0",
+    "chai-enzyme": "^0.5.2",
+    "chai-http": "^3.0.0",
+    "enzyme-adapter-react-15": "^1.0.2",
+    "enzyme-adapter-react-16": "^1.0.2",
+    "faker": "^3.1.0",
+    "json-loader": "^0.5.7",
+    "mkdirp": "^0.5.1",
+    "mocha": "^3.2.0",
+    "react-scripts": "0.9.0",
+    "react-test-renderer": "^15.6.2",
+    "sinon": "^1.17.6",
+    "sinon-chai": "^2.8.0",
+    "webpack": "^1.15.0"
   },
   "scripts": {
     "start": "react-scripts start",
