--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "npm-run-all": "^4.1.1",
     "react": "^16.0.0",
     "react-addons-test-utils": "^15.6.0",
+    "react-autobind": "^1.0.6",
     "react-dom": "^16.0.0",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^4.4.5",
     "react-router-dom": "^4.0.0",
+    "react-widgets": "^4.2.6",
     "redux": "^3.6.0",
     "redux-form": "^7.3.0",
     "redux-thunk": "^2.2.0",
