--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-autobind": "^1.0.6",
     "react-dom": "^16.0.0",
     "react-fontawesome": "^1.6.1",
+    "react-modal": "^3.4.4",
     "react-redux": "^4.4.5",
     "react-router-dom": "^4.0.0",
     "react-widgets": "^4.2.6",
