--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "Explore Your Options",
   "start_url": "./index.html",
   "display": "standalone"
 }
