--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "mocha": "^3.2.0",
     "react-scripts": "0.9.0",
     "react-test-renderer": "^15.6.2",
+    "redux-mock-store": "^1.5.1",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
     "webpack": "^1.15.0"
